--- a/Drawing-library/Drawing-library.vcxproj.filters
+++ b/Drawing-library/Drawing-library.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
+  </ItemGroup>
 </Project>
